# sp-lab4

./: CMakeLists.txt  Makefile  main.cpp
